--- a/BE/.env
+++ b/BE/.env
@@ -1,4 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://hanhnthse181585:YPTE1SL5t4U4O81V@swd392.ygeagcf.mongodb.net/dupss
 SECRET_KEY=dupss
+MAIL_PASSWORD=wqpmvuhtvfgluvba
 //mongodb://localhost:27017/dupss
