--- a/BE/.env
+++ b/BE/.env
@@ -2,4 +2,8 @@ PORT=5000
 MONGO_URI=mongodb+srv://hanhnthse181585:YPTE1SL5t4U4O81V@swd392.ygeagcf.mongodb.net/dupss
 SECRET_KEY=dupss
 MAIL_PASSWORD=wqpmvuhtvfgluvba
+CLOUDINARY_CLOUD_NAME=dlokjzwc9
+CLOUDINARY_API_KEY=898342249264155
+CLOUDINARY_API_SECRET=f3JBE2ZVzzipGW75F5iH2cc1-Hs
+
 //mongodb://localhost:27017/dupss
