--- a/FE/package.json
+++ b/FE/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "react-toastify": "^11.0.5",
-    "react-icons": "^5.5.0"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
