--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
     "cloudinary": "^1.41.3",
+    "date-fns-tz": "^3.2.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3"
