--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.16.0",
     "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
