--- a/BE/package.json
+++ b/BE/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.23",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
