--- a/BE/package.json
+++ b/BE/package.json
@@ -27,8 +27,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
-    "@types/express": "^4.17.22",
+    "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.23",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
