--- a/FE/package.json
+++ b/FE/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.16.0",
+    "install": "^0.13.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
