--- a/FE/package.json
+++ b/FE/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@react-oauth/google": "^0.12.2",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@types/draft-js": "^0.11.18",
+    "antd": "^5.26.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^12.16.0",
     "install": "^0.13.0",
     "jose": "^6.0.11",
@@ -25,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5"
   },
