--- a/FE/package.json
+++ b/FE/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@react-oauth/google": "^0.12.2",
+    "@tiptap/extension-bullet-list": "^2.14.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-list-item": "^2.14.0",
+    "@tiptap/extension-ordered-list": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
