--- a/FE/package.json
+++ b/FE/package.json
@@ -35,6 +35,7 @@
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-quill": "^2.0.0",
