--- a/FE/package.json
+++ b/FE/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.511.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.5.2",
