momo, vnpay notdone

--- a/BE/.env
+++ b/BE/.env
@@ -7,3 +7,10 @@ CLOUDINARY_API_KEY=898342249264155
 CLOUDINARY_API_SECRET=f3JBE2ZVzzipGW75F5iH2cc1-Hs
 
 //mongodb://localhost:27017/dupss
+# MoMo Credentials
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+
+VNP_TMNCODE=6LY20Q42
+VNP_HASHSECRET=4OTGJB27U06AGS80ND6H3IBM90RS4GM7
