--- a/BE/package.json
+++ b/BE/package.json
@@ -13,16 +13,19 @@
   "description": "",
   "dependencies": {
     "@types/qrcode": "^1.5.5",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "vnpay": "^2.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
