--- a/BE/package.json
+++ b/BE/package.json
@@ -28,10 +28,12 @@
     "vnpay": "^2.3.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/moment": "^2.11.29",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.23",
     "@types/nodemailer": "^6.4.17",
