--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "date-fns-tz": "^3.2.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "react-icons": "^5.5.0"
   }
 }
