--- a/FE/package.json
+++ b/FE/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@react-oauth/google": "^0.12.2",
     "@tiptap/extension-bullet-list": "^2.14.0",
     "@tiptap/extension-heading": "^2.14.0",
