--- a/FE/package.json
+++ b/FE/package.json
@@ -24,6 +24,7 @@
     "@types/draft-js": "^0.11.18",
     "antd": "^5.26.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "draft-js": "^0.11.7",
@@ -37,6 +38,7 @@
     "lucide-react": "^0.511.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-draft-wysiwyg": "^1.15.0",
