--- a/FE/package.json
+++ b/FE/package.json
@@ -47,6 +47,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
