--- a/BE/package.json
+++ b/BE/package.json
@@ -35,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/moment": "^2.11.29",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.23",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
