--- a/FE/package.json
+++ b/FE/package.json
@@ -31,6 +31,7 @@
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^12.16.0",
     "html-to-draftjs": "^1.5.0",
+    "html5-qrcode": "^2.3.8",
     "install": "^0.13.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
