--- a/BE/package.json
+++ b/BE/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -23,6 +24,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3",
     "qrcode": "^1.5.4",
     "vnpay": "^2.3.1"
